[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ros_metrics_reporter"
version = "0.3.1"
description = "Metrics reporter for ROS2"
authors = ["Keisuke Shima <keisuke.shima@tier4.jp>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tier4/ros-metrics-reporter"

include = [
    "tests",
    "tox.ini",
]

exclude = []

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.0.3"
bs4 = "^0.0.1"
pandas = "^1.3.5"
plotly = "^5.5.0"
PyGithub = "^1.55"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
pre-commit = "^2.16.0"
colcon-common-extensions = "^0.2.1"
