[metadata]
name = ros-metrics-reporter
version = 0.2.0
description = Metrics reporter for ROS2
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = Keisuke Shima
author_email = keisuke.shima@tier4.jp
url = https://github.com/tier4/ros-metrics-reporter
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    jinja2
    bs4
    pandas
    plotly
    PyGithub

[options.extras_require]
test =
    pytest
    pytest-cov

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
